*7730* Fixed note file alignment

--- a/styles/common.less
+++ b/styles/common.less
@@ -85,6 +85,8 @@ div.noteWrapper {
 }
 
 span.noteFile {
+	float: left;
+	line-height: 24px;
 	margin-top:10px;
 }
 
